# Pen-test

./: .gitignore  CLAUDE.md  README.md  build_exe.bat  build_exe.sh  gui_entry.py  install.sh  pentest_tool_gui.spec  pyproject.toml
pentest_tool/: cli.py  engine.py  findings.py  forms.py  gui.py  http_client.py  report.py  wordlists.py
pentest_tool/data/: admin_paths.txt  common_creds.txt  content_wordlist.txt  sensitive_files.txt
pentest_tool/modules/: admin_discovery.py  content_discovery.py  credentials.py  dns_resolve.py  exposure.py  idor.py  injection.py  port_scan.py  post_access.py  recon.py  subdomains.py
