[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pentest-tool"
version = "0.2.0"
description = "Authorized domain recon + admin-access pen-testing tool"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
]

[project.scripts]
pentest-tool = "pentest_tool.cli:main"

[tool.setuptools]
packages = ["pentest_tool", "pentest_tool.modules"]

[tool.setuptools.package-data]
pentest_tool = ["data/*.txt"]
